[package]
name    = "pm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap       = { version = "4", features = ["derive"] }
sysinfo    = "0.37.1"
homedir    = "0.3.6"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand       = "0.8"
base64     = "0.21"
pbkdf2     = { version = "0.12", features = ["simple"] }
hmac       = "0.12"
sha2       = "0.10"
aes-gcm    = "0.10"
thiserror = "2.0.17"
rpassword = "7.4.0"
